--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@athenna/template",
+  "name": "@athenna/logger",
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
-  "repository": "https://github.com/AthennaIO/Template.git",
-  "bugs": "https://github.com/AthennaIO/Template/issues",
-  "homepage": "https://github.com/AthennaIO/Template#readme",
+  "repository": "https://github.com/AthennaIO/Logger.git",
+  "bugs": "https://github.com/AthennaIO/Logger/issues",
+  "homepage": "https://github.com/AthennaIO/Logger#readme",
   "scripts": {
     "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s . -o .",
     "test": "npm run lint:fix && cross-env NODE_TS=true cross-env NODE_ENV=testing jest --verbose",
@@ -152,6 +152,7 @@
     }
   },
   "dependencies": {
+    "@secjs/utils": "1.8.0",
     "reflect-metadata": "0.1.13",
     "tscpaths": "0.0.9"
   }
