--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -122,6 +122,7 @@
       "dot-notation": "off",
       "camelcase": "off",
       "no-undef": "off",
+      "no-useless-escape": "off",
       "@typescript-eslint/no-var-requires": "off",
       "no-useless-constructor": "off",
       "@typescript-eslint/no-useless-constructor": "off",
@@ -155,8 +156,12 @@
   "dependencies": {
     "@athenna/ioc": "1.1.3",
     "@secjs/utils": "1.8.3",
+    "axios": "0.26.1",
     "chalk": "4.1.1",
+    "pino": "7.10.0",
+    "pino-pretty": "7.6.1",
     "reflect-metadata": "0.1.13",
+    "telegraf": "4.7.0",
     "tscpaths": "0.0.9"
   }
 }
