--- a/package.json
+++ b/package.json
@@ -1,49 +1,81 @@
 {
   "name": "@athenna/logger",
-  "version": "1.1.8",
-  "description": "",
+  "version": "1.0.0",
+  "description": "Template for new projects.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
-  "repository": "https://github.com/AthennaIO/Logger.git",
   "bugs": "https://github.com/AthennaIO/Logger/issues",
+  "repository": "https://github.com/AthennaIO/Logger.git",
   "homepage": "https://github.com/AthennaIO/Logger#readme",
+  "keywords": [],
   "scripts": {
-    "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s . -o .",
-    "test": "npm run lint:fix && cross-env NODE_TS=true cross-env NODE_ENV=testing jest --verbose",
-    "test:debug": "npm run lint:fix && cross-env NODE_TS=true cross-env NODE_ENV=testing cross-env DEBUG=api:* jest --verbose",
-    "lint:fix": "eslint \"{src,tests}/**/*.ts\" --fix"
+    "lint:fix": "eslint \"{src,tests}/**/*.js\" --fix",
+    "test": "npm run --silent lint:fix && node ./tests/index.js",
+    "test:debug": "cross-env DEBUG=api:* && npm run --silent test",
+    "test:coverage": "c8 npm run --silent test",
+    "gen:types": "tsc src/*.js --declaration --allowJs --emitDeclarationOnly --out src/index.js"
   },
-  "keywords": [
-    "nodejs",
-    "athenna",
-    "typescript"
+  "files": [
+    "src/*.js",
+    "src/*.d.ts",
+    "src/**/*.js",
+    "src/**/*.d.ts"
   ],
+  "type": "module",
+  "main": "./src/index.js",
+  "exports": "./src/index.js",
+  "types": "./src/index.d.ts",
+  "imports": {
+    "#src/*": "./src/*.js",
+    "#tests/*": "./tests/*.js"
+  },
+  "dependencies": {
+    "@secjs/utils": "1.9.3",
+    "@athenna/ioc": "1.1.7",
+    "axios": "0.26.1",
+    "pino": "7.10.0",
+    "pino-pretty": "7.6.1",
+    "telegraf": "4.7.0"
+  },
   "devDependencies": {
-    "@types/jest": "27.0.1",
-    "@types/node": "14.17.0",
-    "@typescript-eslint/eslint-plugin": "4.31.0",
-    "@typescript-eslint/parser": "4.31.0",
+    "@japa/assert": "1.3.4",
+    "@japa/run-failed-tests": "1.0.7",
+    "@japa/runner": "2.0.7",
+    "@japa/spec-reporter": "1.1.12",
+    "c8": "7.11.2",
     "commitizen": "4.2.4",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "7.32.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-import-resolver-typescript": "2.4.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-node": "11.1.0",
+    "eslint": "8.14.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-promise": "5.1.0",
-    "eslint-plugin-standard": "5.0.0",
+    "eslint-plugin-promise": "6.0.0",
     "husky": "3.0.9",
-    "jest": "27.1.0",
-    "lint-staged": "9.4.3",
-    "prettier": "2.0.5",
-    "ts-jest": "27.0.5",
-    "ts-loader": "9.2.3",
-    "ts-node": "10.0.0",
-    "tsconfig-paths": "3.9.0",
-    "typescript": "4.3.5"
+    "lint-staged": "12.4.1",
+    "minimist": "1.2.6",
+    "prettier": "2.6.2",
+    "rimraf": "3.0.2",
+    "typescript": "4.6.4"
+  },
+  "c8": {
+    "all": true,
+    "include": [
+      "src/**/*.js"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "report-dir": "./tests/Coverage",
+    "check-coverage": true
+  },
+  "husky": {
+    "hooks": {
+      "prepare-commit-msg": "lint-staged && exec < /dev/tty && git cz --hook || true"
+    }
   },
   "lint-staged": {
     "*.js": [
@@ -55,29 +87,10 @@
       "git add"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "jest": {
-    "modulePaths": [
-      "<rootDir>"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": ".",
-    "testRegex": "Test.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "./coverage",
-    "preset": "ts-jest",
-    "testEnvironment": "node"
   },
   "prettier": {
     "singleQuote": true,
@@ -97,71 +110,29 @@
   },
   "eslintConfig": {
     "env": {
-      "es6": true,
+      "es2021": true,
       "node": true
     },
-    "extends": [
-      "standard",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
-    ],
-    "globals": {
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
-    },
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
-    },
     "plugins": [
-      "@typescript-eslint",
       "prettier"
     ],
+    "extends": [
+      "standard",
+      "eslint:recommended",
+      "plugin:prettier/recommended"
+    ],
+    "ignorePatterns": [
+      "**/*.d.ts"
+    ],
+    "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+    },
     "rules": {
-      "dot-notation": "off",
       "camelcase": "off",
-      "no-undef": "off",
-      "no-useless-escape": "off",
-      "@typescript-eslint/no-var-requires": "off",
-      "no-useless-constructor": "off",
-      "@typescript-eslint/no-useless-constructor": "off",
-      "@typescript-eslint/camelcase": "off",
-      "@typescript-eslint/explicit-module-boundary-types": "off",
-      "@typescript-eslint/interface-name-prefix": "off",
-      "@typescript-eslint/no-explicit-any": "off",
+      "dot-notation": "off",
       "prettier/prettier": "error",
-      "@typescript-eslint/no-empty-function": "off",
-      "@typescript-eslint/no-unused-vars": [
-        "error",
-        {
-          "argsIgnorePattern": "_"
-        }
-      ]
+      "no-useless-constructor": "off"
     }
-  },
-  "files": [
-    "src/*.js",
-    "src/*.d.ts",
-    "src/**/*.js",
-    "src/**/*.d.ts",
-    "*.js",
-    "*.d.ts"
-  ],
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "dependencies": {
-    "@athenna/ioc": "1.1.3",
-    "@secjs/utils": "1.8.3",
-    "axios": "0.26.1",
-    "chalk": "4.1.1",
-    "pino": "7.10.0",
-    "pino-pretty": "7.6.1",
-    "reflect-metadata": "0.1.13",
-    "telegraf": "4.7.0",
-    "tscpaths": "0.0.9"
   }
 }
