--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
       "html"
     ],
     "report-dir": "./tests/Coverage",
-    "check-coverage": true
+    "check-coverage": true,
+    "functions": "50"
   },
   "husky": {
     "hooks": {
