--- a/package.json
+++ b/package.json
@@ -74,7 +74,10 @@
     ],
     "report-dir": "./tests/Coverage",
     "check-coverage": true,
-    "functions": "50"
+    "statements": "80",
+    "branches": "80",
+    "functions": "50",
+    "lines": "80"
   },
   "husky": {
     "hooks": {
