chore(npm): update keywords and readme

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "logger",
     "drivers",
     "formatters",
-    "athenna"
+    "athenna",
+    "esm"
   ],
   "scripts": {
     "lint:fix": "eslint \"{src,tests}/**/*.js\" --fix",
