test(factories): add tests to formatter and driver factory

--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     "include": [
       "src/**/*.js"
     ],
+    "exclude": [
+      "src/Helpers/ColorHelper.js"
+    ],
     "reporter": [
       "text-summary",
       "html"
