--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -47,8 +47,9 @@
     "./providers/LoggerProvider": "./src/Providers/LoggerProvider.js"
   },
   "dependencies": {
-    "@athenna/ioc": "1.2.6",
-    "@secjs/utils": "2.0.1",
+    "@athenna/common": "1.0.0",
+    "@athenna/config": "1.1.8",
+    "@athenna/ioc": "1.2.7",
     "axios": "0.26.1",
     "chalk": "5.0.1",
     "telegraf": "4.7.0"
