--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -49,7 +49,7 @@
   "dependencies": {
     "@athenna/common": "1.0.0",
     "@athenna/config": "1.1.8",
-    "@athenna/ioc": "1.2.7",
+    "@athenna/ioc": "1.2.8",
     "axios": "0.26.1",
     "chalk": "5.0.1",
     "telegraf": "4.7.0"
@@ -133,6 +133,10 @@
     "env": {
       "es2021": true,
       "node": true
+    },
+    "globals": {
+      "Env": true,
+      "ioc": true
     },
     "plugins": [
       "prettier"
