--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -52,7 +52,7 @@
   },
   "devDependencies": {
     "@athenna/common": "3.0.0",
-    "@athenna/config": "3.0.0",
+    "@athenna/config": "3.0.1",
     "@athenna/ioc": "3.0.0",
     "@japa/assert": "1.3.4",
     "@japa/run-failed-tests": "1.0.7",
@@ -62,7 +62,7 @@
     "commitizen": "4.2.5",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
     "eslint": "8.14.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-standard": "17.0.0",
