--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -59,6 +59,7 @@
     "@japa/runner": "2.0.7",
     "@japa/spec-reporter": "1.1.12",
     "c8": "7.11.2",
+    "cls-rtracer": "2.6.2",
     "commitizen": "4.2.5",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
