--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,11 @@ jobs:
 
       - name: Run tests
         run: npm run test:coverage
+        env:
+          SLACK_URL: ${{ secrets.SLACK_URL }}
+          DISCORD_URL: ${{ secrets.DISCORD_URL }}
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
       - name: Test code transpilation
         run: npm run build
