--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,17 @@ on:
       - develop
 
 jobs:
+  qodana:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@main
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+
   linux:
     runs-on: ubuntu-latest
     strategy:
@@ -30,11 +41,6 @@ jobs:
 
       - name: Run tests
         run: npm run test:coverage
-        env:
-          SLACK_URL: ${{ secrets.SLACK_URL }}
-          DISCORD_URL: ${{ secrets.DISCORD_URL }}
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
       - name: Test code transpilation
         run: npm run build
@@ -58,11 +64,6 @@ jobs:
 
       - name: Run tests
         run: npm run test:coverage
-        env:
-          SLACK_URL: ${{ secrets.SLACK_URL }}
-          DISCORD_URL: ${{ secrets.DISCORD_URL }}
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
       - name: Test code transpilation
         run: npm run build
