--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "3.1.4",
+  "version": "3.1.5",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -52,9 +52,10 @@
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
-    "@athenna/common": "^3.3.0",
-    "@athenna/config": "^3.1.2",
-    "@athenna/ioc": "^3.1.4",
+    "@athenna/common": "^3.3.1",
+    "@athenna/config": "^3.2.0",
+    "@athenna/ioc": "^3.1.5",
+    "@athenna/test": "^3.1.1",
     "@japa/assert": "^1.3.6",
     "@japa/run-failed-tests": "^1.1.0",
     "@japa/runner": "^2.2.2",
