--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -21,11 +21,10 @@
     "esm"
   ],
   "scripts": {
-    "node": "cross-env NODE_OPTIONS=\"--experimental-import-meta-resolve\" ts-node",
-    "build": "npm run node --silent -- bin/build.ts",
+    "build": "sh node bin/build.ts",
     "lint:fix": "eslint \"{src,tests}/**/*.ts\" --fix",
-    "test": "npm run --silent lint:fix && npm run node --silent -- bin/test.ts",
-    "test:debug": "cross-env DEBUG=api:* npm run node --silent -- bin/test.ts --inspect",
+    "test": "npm run --silent lint:fix && sh node bin/test.ts",
+    "test:debug": "cross-env DEBUG=api:* sh node --inspect bin/test.ts",
     "test:coverage": "c8 npm run --silent test"
   },
   "files": [
@@ -52,10 +51,10 @@
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
-    "@athenna/common": "^3.3.1",
-    "@athenna/config": "^3.2.0",
-    "@athenna/ioc": "^3.1.5",
-    "@athenna/test": "^3.1.1",
+    "@athenna/common": "^3.4.2",
+    "@athenna/config": "^3.2.1",
+    "@athenna/ioc": "^3.1.6",
+    "@athenna/test": "^3.2.2",
     "@japa/assert": "^1.3.6",
     "@japa/run-failed-tests": "^1.1.0",
     "@japa/runner": "^2.2.2",
@@ -89,6 +88,7 @@
     "prettier": "^2.8.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "sinon": "^15.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
