--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,8 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
-      - name: Test code transpilation
-        run: npm run build
+      - name: Test code compilation
+        run: sh scripts/build
 
   windows:
     runs-on: windows-latest
@@ -75,5 +75,5 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
 
-      - name: Test code transpilation
-        run: npm run build
+      - name: Test code compilation
+        run: sh scripts/build
