--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "3.1.6",
+  "version": "3.1.7",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -21,39 +21,40 @@
     "esm"
   ],
   "scripts": {
-    "build": "sh node bin/build.ts",
-    "lint:fix": "eslint \"{src,tests}/**/*.ts\" --fix",
+    "lint:fix": "eslint \"{bin,src,tests}/**/*.ts\" --fix",
     "test": "npm run --silent lint:fix && sh node bin/test.ts",
     "test:debug": "cross-env DEBUG=api:* sh node --inspect bin/test.ts",
     "test:coverage": "c8 npm run --silent test"
   },
   "files": [
-    "build/*.js",
-    "build/*.d.ts",
-    "build/**/*.js",
-    "build/**/*.d.ts",
-    "templates/**"
+    "src/*.js",
+    "src/*.d.ts",
+    "src/**/*.js",
+    "src/**/*.d.ts",
+    "templates"
   ],
   "type": "module",
-  "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./src/index.js",
+  "types": "./src/index.d.ts",
+  "exports": {
+    ".": "./src/index.js",
+    "./providers/LoggerProvider": "./src/Providers/LoggerProvider.js"
+  },
   "imports": {
+    "#bin/*": "./bin/*.js",
+    "#bin": "./bin/index.js",
     "#src/*": "./src/*.js",
     "#src": "./src/index.js",
     "#tests/*": "./tests/*.js",
     "#tests": "./tests/index.js"
   },
-  "exports": {
-    ".": "./build/index.js",
-    "./providers/LoggerProvider": "./build/Providers/LoggerProvider.js"
-  },
   "dependencies": {
     "telegraf": "^4.11.2"
   },
   "devDependencies": {
-    "@athenna/common": "^3.4.2",
-    "@athenna/config": "^3.2.1",
-    "@athenna/ioc": "^3.1.6",
+    "@athenna/common": "^3.4.4",
+    "@athenna/config": "^3.2.2",
+    "@athenna/ioc": "^3.1.7",
     "@athenna/test": "^3.2.2",
     "@japa/assert": "^1.3.6",
     "@japa/run-failed-tests": "^1.1.0",
@@ -87,7 +88,6 @@
     "minimist": "^1.2.7",
     "prettier": "^2.8.3",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
     "sinon": "^15.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
