--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -40,9 +40,9 @@
   "types": "./src/index.d.ts",
   "exports": {
     ".": "./src/index.js",
-    "./providers/LoggerProvider": "./src/providers/LoggerProvider.js",
     "./types": "./src/types/index.js",
-    "./package.json": "./package.json"
+    "./package.json": "./package.json",
+    "./providers/LoggerProvider": "./src/providers/LoggerProvider.js"
   },
   "imports": {
     "#bin/*": "./bin/*.js",
@@ -59,10 +59,10 @@
     "cls-rtracer": "^2.6.3"
   },
   "devDependencies": {
-    "@athenna/common": "^4.4.0",
-    "@athenna/config": "^4.3.0",
-    "@athenna/ioc": "^4.1.0",
-    "@athenna/test": "^4.3.0",
+    "@athenna/common": "^4.10.1",
+    "@athenna/config": "^4.4.0",
+    "@athenna/ioc": "^4.2.0",
+    "@athenna/test": "^4.5.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "c8": "^7.12.0",
@@ -119,7 +119,7 @@
   },
   "prettier": {
     "singleQuote": true,
-    "trailingComma": "all",
+    "trailingComma": "none",
     "arrowParens": "avoid",
     "endOfLine": "lf",
     "semi": false,
