chore(npm): improve codebase

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "4.5.0",
+  "version": "4.6.0",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -9,6 +9,7 @@
   "homepage": "https://github.com/AthennaIO/Logger#readme",
   "keywords": [
     "slack",
+    "files",
     "discord",
     "telegram",
     "console",
@@ -18,13 +19,17 @@
     "drivers",
     "formatters",
     "athenna",
+    "typescript",
     "esm"
   ],
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
-    "build": "rimraf build && tsc --project bin/tsconfig.build.json",
+    "build": "node node_modules/@athenna/tsconfig/src/build.js",
     "lint:fix": "eslint \"{bin,src,tests}/**/*.ts\" --fix",
-    "test": "npm run --silent lint:fix && sh node bin/test.ts",
-    "test:debug": "cross-env NODE_DEBUG=athenna:* sh node --inspect bin/test.ts",
+    "test": "npm run --silent lint:fix && node --import=@athenna/tsconfig bin/test.ts",
+    "test:debug": "cross-env NODE_DEBUG=athenna:* node --inspect --import=@athenna/tsconfig bin/test.ts",
     "test:coverage": "c8 npm run --silent test"
   },
   "files": [
@@ -41,6 +46,7 @@
   "exports": {
     ".": "./src/index.js",
     "./types": "./src/types/index.js",
+    "./package": "./package.json",
     "./package.json": "./package.json",
     "./providers/LoggerProvider": "./src/providers/LoggerProvider.js"
   },
@@ -59,15 +65,14 @@
     "cls-rtracer": "^2.6.3"
   },
   "devDependencies": {
-    "@athenna/common": "^4.13.1",
-    "@athenna/config": "^4.4.0",
-    "@athenna/ioc": "^4.3.0",
-    "@athenna/test": "^4.7.0",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "c8": "^7.12.0",
+    "@athenna/common": "^4.17.0",
+    "@athenna/config": "^4.5.0",
+    "@athenna/ioc": "^4.5.0",
+    "@athenna/test": "^4.10.0",
+    "@athenna/tsconfig": "^4.8.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "commitizen": "^4.2.6",
-    "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
@@ -78,11 +83,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^3.1.0",
     "lint-staged": "^12.5.0",
-    "prettier": "^2.8.7",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^5.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2"
+    "prettier": "^2.8.7"
   },
   "c8": {
     "all": true,
