--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@athenna/logger",
-  "version": "4.15.0",
+  "version": "4.16.0",
   "description": "The Athenna logging solution. Log in stdout, files and buckets.",
   "license": "MIT",
   "author": "João Lenon <lenon@athenna.io>",
@@ -61,13 +61,14 @@
     "#tests": "./tests/index.js"
   },
   "dependencies": {
-    "telegraf": "^4.15.3",
-    "cls-rtracer": "^2.6.3"
+    "@aws-lambda-powertools/logger": "^1.18.0",
+    "cls-rtracer": "^2.6.3",
+    "telegraf": "^4.15.3"
   },
   "devDependencies": {
-    "@athenna/common": "^4.32.0",
-    "@athenna/config": "^4.14.0",
-    "@athenna/ioc": "^4.14.0",
+    "@athenna/common": "^4.33.0",
+    "@athenna/config": "^4.15.0",
+    "@athenna/ioc": "^4.15.0",
     "@athenna/test": "^4.21.0",
     "@athenna/tsconfig": "^4.12.0",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
